--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "ensure",
     "env"
   ],
-  "author": "juanjoLenero",
-  "license": "ISC"
+  "author": "Juanjo Lenero",
+  "license": "MIT"
 }
